<resources>
    <string name="app_name">Ganesh Darshan</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">Done</string>

    <!--Slide 1-->
    <string name="slide_1_title">Right In Your Hand</string>
    <string name="slide_1_desc">Watch all the Ganesha around Belagavi in just one click</string>

    <!--Slide 2-->
    <string name="slide_2_title">Get Blessed</string>
    <string name="slide_2_desc">Get blessed by \"Pratham Poojita\". See all the Sarvajanik Ganapati\'s at one place.</string>

    <!--Slide 3-->
    <string name="slide_3_title">Showcase</string>
    <string name="slide_3_desc">Upload your Home Ganapati Image to show it to Belagavi people.</string>

    <!--Slide 4-->
    <string name="slide_4_desc">You are allmost done</string>

    <!--Home Screen-->
    <string name="hero_image">Hero Image</string>
    <string name="swastik">Swastik</string>
    <string name="home_item1">Sarvajanik Ganapati</string>
    <string name="home_item2">Home Ganapati</string>
    <string name="home_item3">Preparation</string>
    <string name="home_img_3">Home Image 3</string>
    <string name="home_img_2">Home Image 2</string>
    <string name="home_img_1">Home Image 3</string>
    <string name="footer">Made With ♥ by Darshan Design Pro</string>

    <!--Search Variables-->
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Home Ganesha</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type Your Name…</string>

    <string name="get_the_blessings_of_lord_ganesha_right_in_you_hand_nhere_is_the_list_of_area_s_that_you_can_view">Get the blessings of Lord Ganesha Right in you hand.  Here is the list of area\'s that you can view.</string>

    <string name="area_1">Angol</string>
    <string name="area_2">Auto Nagar</string>
    <string name="area_3">Bogarves</string>
    <string name="area_4">Camp</string>
    <string name="area_5">Chennama</string>
    <string name="area_6">Fort Road</string>
    <string name="area_7">Hindalga</string>
    <string name="area_8">Honaga</string>
    <string name="area_9">Kangrali</string>
    <string name="area_10">Khanapur</string>
    <string name="area_11">Nehru Nagar</string>
    <string name="area_12">Shahapur</string>
    <string name="area_13">Tilakwadi</string>
    <string name="area_14">Vadagaon</string>
    <string name="home_item4">Upload Images</string>
</resources>
